added travis deploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,12 @@ before_install:
 script:
   - docker run -e CI=true ocdejong/docker-react npm run test
 
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-2"
+  app: "docker-react"
+  env: "Dockerreact-env"
+  bucket_name: "elasticbeanstalk-us-west-2-452083301106"
+  bucket_path: "docker-react"
+  on:
+    branch: master
