--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ deploy:
   on:
     branch: master
   access_key_id:
-    secure: $AWS_ACCESS_KEY
+    secure: "Encrypted <access-key-id>="
   secret_access_key:
-    secure: "$AWS_SECRET_KEY"
+    secure: "Encypted <secret-access-key>="
