--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ deploy:
   on:
     branch: master
   access_key_id:
-    secure: "Encrypted <access-key-id>="
+    secure: "Encrypted $AWS_ACCESS_KEY"
   secret_access_key:
-    secure: "Encypted <secret-access-key>="
+    secure: "Encypted $AWS_SECRET_KEY"
